--- a/guessing_game/Cargo.toml
+++ b/guessing_game/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "guessing_game"
 version = "0.1.0"
-authors = ["arctico"]
+authors = ["Luis León <luis.leon@pm.me>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
